--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -47,7 +47,7 @@ body {
 .home-section.wg-about-avatar {
   padding: 0;
   /* AÑADE esto para tu fondo tipo hero */
-  background: linear-gradient(rgba(20,20,20,0.4), rgba(20,20,20,0.4)), url('/media/IMG_1113.jpg') center center/cover no-repeat;
+  background: linear-gradient(rgba(20,20,20,0.4), rgba(20,20,20,0.4)), url('static/media/IMG_1113.jpg') center center/cover no-repeat;
   min-height: 600px; /* Puedes ajustar la altura */
   display: flex;
   flex-direction: column;
