--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -1,6 +1,9 @@
 .home-section.wg-about-avatar {
   padding: 0;
-  background: linear-gradient(rgba(20,20,20,0.4), rgba(20,20,20,0.4)), url('/media/IMG_1113.jpg') center center/cover no-repeat !important;
+  background: linear-gradient(rgba(20,20,20,0.4), rgba(20,20,20,0.4)), url('/media/IMG_1113.jpg');
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
   min-height: 600px;
   display: flex;
   flex-direction: column;
